qpms/qpms_types.h


typedef int qpms_lm_t;
typedef int qpms_l_t;
typedef qpms_lm_t qpms_m_t;
typedef enum {
	QPMS_VSWF_ELECTRIC = 2, 
	QPMS_VSWF_MAGNETIC = 1, 
	QPMS_VSWF_LONGITUDINAL = 0 
} qpms_vswf_type_t;
typedef unsigned long long qpms_uvswfi_t;
typedef enum {
	QPMS_SUCCESS = 0, 
	QPMS_ERROR = 1, 
	QPMS_ENOMEM = 8, 
	QPMS_NAN_ENCOUNTERED = 1024 
} qpms_errno_t;
typedef enum {
#define QPMS_NORMALISATION_T_CSBIT 128 
#ifdef USE_XU_ANTINORMALISATION
	QPMS_NORMALISATION_XU = 4, 
	QPMS_NORMALISATION_XU_CS = QPMS_NORMALISATION_XU | QPMS_NORMALISATION_T_CSBIT, 
#endif
	QPMS_NORMALISATION_NONE = 3, 
	QPMS_NORMALISATION_KRISTENSSON = 2, 
	QPMS_NORMALISATION_POWER = QPMS_NORMALISATION_KRISTENSSON, 
	QPMS_NORMALISATION_TAYLOR = 1,
	QPMS_NORMALISATION_SPHARM = QPMS_NORMALISATION_TAYLOR,
	QPMS_NORMALISATION_NONE_CS = QPMS_NORMALISATION_NONE | QPMS_NORMALISATION_T_CSBIT,
	QPMS_NORMALISATION_KRISTENSSON_CS = QPMS_NORMALISATION_KRISTENSSON | QPMS_NORMALISATION_T_CSBIT, 
	QPMS_NORMALISATION_POWER_CS = QPMS_NORMALISATION_KRISTENSSON_CS,
	QPMS_NORMALISATION_TAYLOR_CS = QPMS_NORMALISATION_TAYLOR | QPMS_NORMALISATION_T_CSBIT,
	QPMS_NORMALISATION_SPHARM_CS = QPMS_NORMALISATION_TAYLOR_CS,
	QPMS_NORMALISATION_UNDEF = 0
} qpms_normalisation_t;
typedef struct cart3_t {
	double x, y, z;
} cart3_t;
typedef struct cart2_t {
	double x, y;
} cart2_t;
typedef struct sph_t {
	double r, theta, phi;
} sph_t;
typedef struct pol_t {
	double r, phi;
} pol_t;
typedef union anycoord_point_t {
	double z; 
	cart3_t cart3;
	cart2_t cart2;
	sph_t sph;
	pol_t pol;
} anycoord_point_t;
typedef struct qpms_quat_t {
        complex double a, b;
} qpms_quat_t;
typedef struct qpms_quat4d_t {
        double c1, ci, cj, ck;
} qpms_quat4d_t;
typedef struct qpms_irot3_t {
        qpms_quat_t rot; 
        short det; 
} qpms_irot3_t;
typedef struct qpms_vswf_set_spec_t {
        size_t n; 
        qpms_uvswfi_t *ilist; 
        qpms_l_t lMax; 
        qpms_l_t lMax_M, 
                 lMax_N, 
                 lMax_L; 
        size_t capacity; 
        qpms_normalisation_t norm; 
} qpms_vswf_set_spec_t;
typedef int32_t qpms_ss_tmi_t;
typedef int32_t qpms_ss_pi_t;
typedef int qpms_gmi_t;
typedef int qpms_iri_t;
typedef const char * qpms_permutation_t;
typedef struct qpms_tmatrix_t {
        const qpms_vswf_set_spec_t *spec;
        complex double *m; 
        bool owns_m; 
} qpms_tmatrix_t;