qpms/lattices.h


typedef struct PGen {
	const struct PGenClassInfo *  c; 
	void *stateData;
} PGen;
typedef enum PGenPointFlags {
	PGEN_NOTDONE = 2, 
	PGEN_OLD_R = 1, 
	PGEN_SINGLE_R = 16,
	PGEN_AT_Z = 4, 
	PGEN_AT_XY = 8, 
	PGEN_METHOD_UNAVAILABLE = 2048, 
	PGEN_DONE = 0, 
	PGEN_COORDS_CART1 = QPMS_COORDS_CART1,
	PGEN_COORDS_CART2 = QPMS_COORDS_CART2,
	PGEN_COORDS_CART3 = QPMS_COORDS_CART3,
	PGEN_COORDS_POL = QPMS_COORDS_POL,
	PGEN_COORDS_SPH = QPMS_COORDS_SPH,
	PGEN_COORDS_BITRANGE = QPMS_COORDS_BITRANGE,
} PGenPointFlags;
typedef struct PGenReturnDataBulk {
	PGenPointFlags flags;
	size_t generated; 
} PGenReturnDataBulk;
typedef struct PGenReturnData { 
	PGenPointFlags flags; 
	anycoord_point_t point; 
} PGenReturnData;
typedef struct PGenZReturnData {
  PGenPointFlags flags; 
  double point_z; 
} PGenZReturnData;
typedef struct PGenPolReturnData {
  PGenPointFlags flags; 
  pol_t point_pol; 
} PGenPolReturnData;
typedef struct PGenSphReturnData {
  PGenPointFlags flags; 
  sph_t point_sph; 
} PGenSphReturnData;
typedef struct PGenCart2ReturnData {
  PGenPointFlags flags; 
  cart2_t point_cart2; 
} PGenCart2ReturnData;
typedef struct PGenCart3ReturnData {
  PGenPointFlags flags; 
  cart3_t point_cart3; 
} PGenCart3ReturnData;
typedef struct PGenClassInfo { 
	char * const name; 
	int dimensionality; 
	PGenPointFlags native_point_flags;
	PGenReturnData (*next)(struct PGen *);
	PGenZReturnData (*next_z)(struct PGen *);
	PGenPolReturnData (*next_pol)(struct PGen *); 
	PGenSphReturnData (*next_sph)(struct PGen *);
	PGenCart2ReturnData (*next_cart2)(struct PGen *);
	PGenCart3ReturnData (*next_cart3)(struct PGen *);
	PGenReturnDataBulk (*fetch)(struct PGen *, size_t, anycoord_point_t *);
	PGenReturnDataBulk (*fetch_z)(struct PGen *, size_t, double *);
	PGenReturnDataBulk (*fetch_pol)(struct PGen *, size_t, pol_t *); 
	PGenReturnDataBulk (*fetch_sph)(struct PGen *, size_t, sph_t *);
	PGenReturnDataBulk (*fetch_cart2)(struct PGen *, size_t, cart2_t *);
	PGenReturnDataBulk (*fetch_cart3)(struct PGen *, size_t, cart3_t *);
	void (*destructor)(struct PGen *); 
} PGenClassInfo;
static inline void PGen_destroy(PGen *g) {
	g->c->destructor(g);
	assert(g->stateData == NULL); 
}
typedef enum PGen_1D_incrementDirection{
    PGEN_1D_INC_FROM_ORIGIN,
    PGEN_1D_INC_TOWARDS_ORIGIN
} PGen_1D_incrementDirection;
PGen PGen_1D_new_minMaxR(double period, 
	double offset, 
	double minR, 
	bool inc_minR, 
	double maxR, 
	bool inc_maxR, 
	PGen_1D_incrementDirection incdir 
);
PGen PGen_xyWeb_new(cart2_t b1, cart2_t b2, double rtol, cart2_t offset, 
		double minR, bool inc_minR, double maxR, bool inc_maxR);